--- a/ansible/roles/master/tasks/sdn.yml
+++ b/ansible/roles/master/tasks/sdn.yml
@@ -1,4 +1,4 @@
-- name: 'Aplying Network Politics definition'
+- name: 'SDN: Aplying Network Politics definition'
   shell: kubectl apply -f https://docs.projectcalico.org/manifests/canal.yaml
   become: false
   notify: Reboot
