--- a/ansible/roles/kube-nodes/tasks/config_traffic.yml
+++ b/ansible/roles/kube-nodes/tasks/config_traffic.yml
@@ -13,7 +13,7 @@
     state: enabled
   notify: Reload Firewall
 
-- name: 'Create|Update sysctl.d/k8s.conf'
+- name: 'Updating sysctl.d/k8s.conf'
   lineinfile:
     dest: /etc/sysctl.d/k8s.conf
     line: '{{item}}'
